style: (#1) Solved the scroll to get the app component out of the screen

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,10 @@
 body {
     overflow: hidden;
 }
+
+#root {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
